--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "common-utils-zdluoa": "^1.0.8",
     "d3": "^5.7.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "three": "^0.99.0"
   },
   "devDependencies": {
